--- a/src/app/sections/horizontal-marquee/horizontal-marquee.module.scss
+++ b/src/app/sections/horizontal-marquee/horizontal-marquee.module.scss
@@ -10,7 +10,7 @@
 }
 
 .pinned {
-  height: 100vh;
+  height: 100dvh;
   position: sticky;
   top: 0;
   overflow: hidden;
