--- a/src/app/sections/lab-cylinder/intro/intro.module.scss
+++ b/src/app/sections/lab-cylinder/intro/intro.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   padding: tovw(32px) 0;
   overflow: hidden;
 
